design dos campos de refrigeração alterados

--- a/views/fichas/indexFicha.ejs
+++ b/views/fichas/indexFicha.ejs
@@ -203,7 +203,7 @@
          <tbody></tbody>
       </table>
 
-      <table id="camaraQuente" class="table-bordered" style="width: 100%;">
+      <table id="camaraQuente" class="table-bordered" style="width: 100%; margin-top: 40px;">
          <thead>
             <tr>
                <th colspan="5">CÂMARA QUENTE</th>
@@ -213,7 +213,7 @@
          <tbody></tbody>
       </table>
 
-      <table id="valveGate" class="table-bordered" style="width: 100%;">
+      <table id="valveGate" class="table-bordered" style="width: 100%; margin-top: 40px;">
          <thead>
             <tr>
                <th colspan="5">VALVE GATES</th>
@@ -226,19 +226,21 @@
          <tbody></tbody>
       </table>
 
-      <table id="refrigeracao" class="table-bordered">
+      <table id="refrigeracao" class="table-bordered" style="margin-top: 40px;">
          <thead>
             <tr>
-               <th colspan="7">REFRIGERAÇÃO DO MOLDE</th>
+               <th colspan="5">REFRIGERAÇÃO DO MOLDE</th>
+               <th colspan="2">TOL &#177; 10%</th>
             </tr>
          </thead>
          <tbody></tbody>
       </table>
 
-      <table id="vapor" class="table-bordered">
+      <table id="vapor" class="table-bordered" style="margin-top: 40px;">
          <thead>
             <tr>
-               <th colspan="7">STEAM(VAPOR)</th>
+               <th colspan="5">STEAM(VAPOR)</th>
+               <th colspan="2">TOL &#177; 10%</th>
             </tr>
             <tr>
                <th colspan="7">REFRIGERAÇÃO DO MOLDE</th>
